--- a/power/package.json
+++ b/power/package.json
@@ -23,6 +23,7 @@
     "@angular/forms": "^9.0.7",
     "@angular/http": "^7.2.16",
     "@angular/localize": "^9.0.7",
+    "@angular/material": "^9.0.7",
     "@angular/platform-browser": "^9.0.7",
     "@angular/platform-browser-dynamic": "^9.0.7",
     "@angular/router": "^9.0.7",
