--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,6 +46,11 @@ test:karma:
     - cd power
     - node_modules/@angular/cli/bin/ng test --browsers ChromeHeadlessNoSandbox --progress false --watch false --code-coverage
   coverage: '/Lines \W+: (\d+\.\d+)%.*/'
+  artifacts:
+    reports:
+      junit: power/junit_karma.xml
+    paths:
+      - power/junit_karma.xml
   only:
     - merge_requests
     - master
