--- a/power/package.json
+++ b/power/package.json
@@ -85,6 +85,7 @@
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.5.2",
+    "karma-junit-reporter": "^2.0.1",
     "protractor": "^5.4.3",
     "ts-node": "^8.8.1",
     "tslint": "~5.12.1",
