--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,9 +48,9 @@ test:karma:
   coverage: '/Lines \W+: (\d+\.\d+)%.*/'
   artifacts:
     reports:
-      junit: power/junit_karma.xml
+      junit: power/output/junit_karma.xml
     paths:
-      - power/junit_karma.xml
+      - power/output/junit_karma.xml
   only:
     - merge_requests
     - master
@@ -68,6 +68,11 @@ test:e2e:
     # Run E2E tests
     - cd power
     - node_modules/@angular/cli/bin/ng e2e --protractor-config e2e/protractor-ci.conf.js
+  artifacts:
+    reports:
+      junit: power/output/junit_e2e.xml
+    paths:
+      - power/output/junit_e2e.xml
   only:
     - merge_requests
     - master
