--- a/power/package.json
+++ b/power/package.json
@@ -79,6 +79,7 @@
     "@types/node": "^12.12.30",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
+    "jasmine-reporters": "^2.3.2",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.4.1",
     "karma-chrome-launcher": "~2.2.0",
