--- a/power/package.json
+++ b/power/package.json
@@ -1,6 +1,6 @@
 {
   "name": "power",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Portal für Wertermittlungsinformationen",
   "author": "Landesamt für Geoinformation und Landesvermessung Niedersachsen",
   "scripts": {
@@ -13,25 +13,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/core": "^9.0.7",
-    "@angular-devkit/schematics": "^9.0.7",
-    "@angular/animations": "^9.0.7",
+    "@angular-devkit/core": "^9.1.1",
+    "@angular-devkit/schematics": "^9.1.1",
+    "@angular/animations": "^9.1.1",
     "@angular/cdk": "^7.3.7",
-    "@angular/common": "^9.0.7",
-    "@angular/compiler": "^9.0.7",
-    "@angular/core": "^9.0.7",
-    "@angular/forms": "^9.0.7",
-    "@angular/http": "^7.2.16",
-    "@angular/localize": "^9.0.7",
+    "@angular/common": "^9.1.1",
+    "@angular/compiler": "^9.1.1",
+    "@angular/core": "^9.1.1",
+    "@angular/forms": "^9.1.1",
+    "@angular/localize": "^9.1.1",
     "@angular/material": "^9.0.7",
-    "@angular/platform-browser": "^9.0.7",
-    "@angular/platform-browser-dynamic": "^9.0.7",
-    "@angular/router": "^9.0.7",
-    "@angular/service-worker": "^9.0.7",
-    "@ng-bootstrap/ng-bootstrap": "^5.3.0",
-    "@ngrx/effects": "^7.4.0",
-    "@ngrx/store": "^7.4.0",
-    "@ngrx/store-devtools": "^7.4.0",
+    "@angular/platform-browser": "^9.1.1",
+    "@angular/platform-browser-dynamic": "^9.1.1",
+    "@angular/router": "^9.1.1",
+    "@angular/service-worker": "^9.1.1",
+    "@ng-bootstrap/ng-bootstrap": "^6.0.2",
+    "@ngrx/effects": "^9.1.0",
+    "@ngrx/store": "^9.1.0",
+    "@ngrx/store-devtools": "^9.1.0",
     "@turf/turf": "^5.1.6",
     "@types/geojson": "^7946.0.7",
     "@types/polylabel": "^1.0.5",
@@ -49,47 +48,46 @@
     "i": "^0.3.6",
     "knockout": "^3.5.1",
     "mapbox-gl": "0.53.1",
-    "ngrx-store-freeze": "^0.2.4",
-    "ngx-bootstrap": "^5.5.0",
+    "ngx-bootstrap": "^5.6.1",
     "ngx-echarts": "^4.2.2",
     "ngx-lib-ivy-bug": "0.0.11",
     "ngx-mapbox-gl": "4.4.1",
     "ngx-smooth-dnd": "^0.4.1",
     "node-sass": "^4.13.1",
-    "npm": "^6.14.3",
+    "npm": "^6.14.4",
     "polylabel": "^1.0.2",
-    "rxjs": "^6.5.4",
-    "rxjs-compat": "^6.5.4",
+    "rxjs": "^6.5.5",
+    "rxjs-compat": "^6.5.5",
     "showdown": "^1.9.1",
-    "survey-angular": "^1.5.16",
-    "surveyjs-widgets": "^1.5.16",
-    "surveyjs-wrapper": "0.0.2",
+    "survey-angular": "^1.5.19",
+    "surveyjs-widgets": "^1.5.19",
+    "surveyjs-wrapper": "0.0.16",
     "tslib": "^1.11.1",
     "web-animations-js": "^2.3.2",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "=0.803.22",
-    "@angular/cli": "9.0.7",
-    "@angular/compiler-cli": "9.0.7",
-    "@angular/language-service": "^9.0.7",
-    "@types/jasmine": "^3.5.9",
+    "@angular/cli": "^9.1.1",
+    "@angular/compiler-cli": "^9.1.1",
+    "@angular/language-service": "^9.1.1",
+    "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "^2.0.8",
     "@types/mapbox-gl": "0.51.4",
-    "@types/node": "^12.12.30",
-    "codelyzer": "^5.1.2",
+    "@types/node": "^12.12.35",
+    "codelyzer": "^5.2.2",
     "jasmine-core": "~3.5.0",
     "jasmine-reporters": "^2.3.2",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.4.1",
-    "karma-chrome-launcher": "~2.2.0",
+    "jasmine-spec-reporter": "~5.0.1",
+    "karma": "^5.0.1",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "~2.0.1",
+    "karma-jasmine": "~3.1.1",
     "karma-jasmine-html-reporter": "^1.5.2",
     "karma-junit-reporter": "^2.0.1",
     "protractor": "^5.4.3",
-    "ts-node": "^8.8.1",
-    "tslint": "~5.12.1",
+    "ts-node": "^8.8.2",
+    "tslint": "^6.1.1",
     "typescript": "3.7.5"
   }
 }
