--- a/power/package.json
+++ b/power/package.json
@@ -15,18 +15,18 @@
   "dependencies": {
     "@angular-devkit/core": "^9.1.1",
     "@angular-devkit/schematics": "^9.1.1",
-    "@angular/animations": "^9.1.1",
+    "@angular/animations": "^9.1.2",
     "@angular/cdk": "^7.3.7",
-    "@angular/common": "^9.1.1",
-    "@angular/compiler": "^9.1.1",
-    "@angular/core": "^9.1.1",
-    "@angular/forms": "^9.1.1",
-    "@angular/localize": "^9.1.1",
-    "@angular/material": "^9.0.7",
-    "@angular/platform-browser": "^9.1.1",
-    "@angular/platform-browser-dynamic": "^9.1.1",
-    "@angular/router": "^9.1.1",
-    "@angular/service-worker": "^9.1.1",
+    "@angular/common": "^9.1.2",
+    "@angular/compiler": "^9.1.2",
+    "@angular/core": "^9.1.2",
+    "@angular/forms": "^9.1.2",
+    "@angular/localize": "^9.1.2",
+    "@angular/material": "^9.2.1",
+    "@angular/platform-browser": "^9.1.2",
+    "@angular/platform-browser-dynamic": "^9.1.2",
+    "@angular/router": "^9.1.2",
+    "@angular/service-worker": "^9.1.2",
     "@ng-bootstrap/ng-bootstrap": "^6.0.2",
     "@ngrx/effects": "^9.1.0",
     "@ngrx/store": "^9.1.0",
@@ -59,9 +59,9 @@
     "rxjs": "^6.5.5",
     "rxjs-compat": "^6.5.5",
     "showdown": "^1.9.1",
-    "survey-angular": "^1.5.19",
-    "surveyjs-widgets": "^1.5.19",
-    "surveyjs-wrapper": "0.0.16",
+    "survey-angular": "~1.5.20",
+    "surveyjs-widgets": "~1.5.19",
+    "surveyjs-wrapper": "~0.0.16",
     "tslib": "^1.11.1",
     "web-animations-js": "^2.3.2",
     "zone.js": "^0.10.3"
@@ -69,8 +69,8 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "=0.803.22",
     "@angular/cli": "^9.1.1",
-    "@angular/compiler-cli": "^9.1.1",
-    "@angular/language-service": "^9.1.1",
+    "@angular/compiler-cli": "^9.1.2",
+    "@angular/language-service": "^9.1.2",
     "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "^2.0.8",
     "@types/mapbox-gl": "0.51.4",
