Created Config with ConfigService to active/deactivate Modules.

--- a/power/ngsw-config.json
+++ b/power/ngsw-config.json
@@ -19,6 +19,7 @@
       "resources": {
         "files": [
           "/assets/**",
+          "!/assets/config.json",
           "/mvt/**"
         ]
       }
