--- a/power/angular.json
+++ b/power/angular.json
@@ -26,7 +26,8 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/manifest.json"
+              "src/manifest.json",
+              "src/config.json"
             ],
             "styles": [
               "src/styles.scss",
