--- a/power/package.json
+++ b/power/package.json
@@ -13,20 +13,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/core": "^9.1.3",
-    "@angular-devkit/schematics": "^9.1.3",
-    "@angular/animations": "^9.1.3",
-    "@angular/cdk": "^7.3.7",
-    "@angular/common": "^9.1.3",
-    "@angular/compiler": "^9.1.3",
-    "@angular/core": "^9.1.3",
-    "@angular/forms": "^9.1.3",
-    "@angular/localize": "^9.1.3",
+    "@angular-devkit/core": "^9.1.4",
+    "@angular-devkit/schematics": "^9.1.4",
+    "@angular/animations": "^9.1.4",
+    "@angular/cdk": "^9.2.1",
+    "@angular/common": "^9.1.4",
+    "@angular/compiler": "^9.1.4",
+    "@angular/core": "^9.1.4",
+    "@angular/forms": "^9.1.4",
+    "@angular/localize": "^9.1.4",
     "@angular/material": "^9.2.1",
-    "@angular/platform-browser": "^9.1.3",
-    "@angular/platform-browser-dynamic": "^9.1.3",
-    "@angular/router": "^9.1.3",
-    "@angular/service-worker": "^9.1.3",
+    "@angular/platform-browser": "^9.1.4",
+    "@angular/platform-browser-dynamic": "^9.1.4",
+    "@angular/router": "^9.1.4",
+    "@angular/service-worker": "^9.1.4",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "@ngrx/effects": "^9.1.0",
     "@ngrx/store": "^9.1.0",
@@ -52,7 +52,7 @@
     "ngx-echarts": "^4.2.2",
     "ngx-mapbox-gl": "4.4.1",
     "ngx-smooth-dnd": "^0.4.1",
-    "node-sass": "^4.13.1",
+    "node-sass": "~4.13.1",
     "npm": "^6.14.4",
     "polylabel": "^1.0.2",
     "rxjs": "^6.5.5",
@@ -67,9 +67,9 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "=0.803.22",
-    "@angular/cli": "^9.1.3",
-    "@angular/compiler-cli": "^9.1.3",
-    "@angular/language-service": "^9.1.3",
+    "@angular/cli": "^9.1.4",
+    "@angular/compiler-cli": "^9.1.4",
+    "@angular/language-service": "^9.1.4",
     "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "^2.0.8",
     "@types/mapbox-gl": "0.51.4",
@@ -78,7 +78,7 @@
     "jasmine-core": "~3.5.0",
     "jasmine-reporters": "^2.3.2",
     "jasmine-spec-reporter": "~5.0.2",
-    "karma": "^5.0.2",
+    "karma": "^5.0.3",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~3.1.1",
