Updated dependencies, fixed a lot of stuff in fragebogen

--- a/power/angular.json
+++ b/power/angular.json
@@ -26,11 +26,11 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
+              "src/webfonts",
               "src/manifest.json"
             ],
             "styles": [
-              "src/styles.scss",
-              "src/webfonts/fontawesome.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -97,6 +97,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
+              "src/webfonts",
               "src/manifest.json"
             ]
           }
