--- a/power/package.json
+++ b/power/package.json
@@ -1,6 +1,6 @@
 {
   "name": "power",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "Portal für Wertermittlungsinformationen",
   "author": "Landesamt für Geoinformation und Landesvermessung Niedersachsen",
   "scripts": {
@@ -16,21 +16,21 @@
     "@angular-devkit/core": "^9.1.4",
     "@angular-devkit/schematics": "^9.1.4",
     "@angular/animations": "^9.1.4",
-    "@angular/cdk": "^9.2.1",
+    "@angular/cdk": "^9.2.2",
     "@angular/common": "^9.1.4",
     "@angular/compiler": "^9.1.4",
     "@angular/core": "^9.1.4",
     "@angular/forms": "^9.1.4",
     "@angular/localize": "^9.1.4",
-    "@angular/material": "^9.2.1",
+    "@angular/material": "^9.2.2",
     "@angular/platform-browser": "^9.1.4",
     "@angular/platform-browser-dynamic": "^9.1.4",
     "@angular/router": "^9.1.4",
     "@angular/service-worker": "^9.1.4",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
-    "@ngrx/effects": "^9.1.0",
-    "@ngrx/store": "^9.1.0",
-    "@ngrx/store-devtools": "^9.1.0",
+    "@ngrx/effects": "^9.1.1",
+    "@ngrx/store": "^9.1.1",
+    "@ngrx/store-devtools": "^9.1.1",
     "@turf/turf": "^5.1.6",
     "@types/geojson": "^7946.0.7",
     "@types/polylabel": "^1.0.5",
@@ -41,7 +41,6 @@
     "core-js": "^2.6.11",
     "echarts": "^4.7.0",
     "fast-xml-parser": "^3.16.0",
-    "font-awesome": "^4.7.0",
     "geojson": "^0.5.0",
     "hammerjs": "^2.0.8",
     "http-server": "^0.12.3",
@@ -53,39 +52,38 @@
     "ngx-mapbox-gl": "4.4.1",
     "ngx-smooth-dnd": "^0.4.1",
     "node-sass": "~4.13.1",
-    "npm": "^6.14.4",
+    "nouislider": "^14.3.0",
+    "npm": "^6.14.5",
     "polylabel": "^1.0.2",
     "rxjs": "^6.5.5",
     "rxjs-compat": "^6.5.5",
     "showdown": "^1.9.1",
     "survey-angular": "~1.5.20",
-    "surveyjs-widgets": "~1.5.19",
-    "surveyjs-wrapper": "~0.0.16",
-    "tslib": "^1.11.1",
+    "tslib": "^1.11.2",
     "web-animations-js": "^2.3.2",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "=0.803.22",
+    "@angular-devkit/build-angular": "^0.901.4",
     "@angular/cli": "^9.1.4",
     "@angular/compiler-cli": "^9.1.4",
     "@angular/language-service": "^9.1.4",
     "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "^2.0.8",
     "@types/mapbox-gl": "0.51.4",
-    "@types/node": "^12.12.37",
+    "@types/node": "^12.12.38",
     "codelyzer": "^5.2.2",
     "jasmine-core": "~3.5.0",
     "jasmine-reporters": "^2.3.2",
     "jasmine-spec-reporter": "~5.0.2",
-    "karma": "^5.0.3",
+    "karma": "^5.0.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~3.1.1",
     "karma-jasmine-html-reporter": "^1.5.2",
     "karma-junit-reporter": "^2.0.1",
     "protractor": "^5.4.4",
-    "ts-node": "^8.9.1",
+    "ts-node": "^8.10.1",
     "tslint": "^5.20.1",
     "typescript": "3.7.5"
   }
