--- a/power/.editorconfig
+++ b/power/.editorconfig
@@ -1,4 +1,4 @@
-# Editor configuration, see http://editorconfig.org
+# Editor configuration, see https://editorconfig.org
 root = true
 
 [*]
@@ -6,6 +6,7 @@ charset = utf-8
 indent_style = space
 indent_size = 2
 insert_final_newline = true
+max_line_length = 120
 trim_trailing_whitespace = true
 
 [*.md]
