Implemented fillout page

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -98,6 +98,9 @@ code_quality:
       codequality: gl-code-quality-report.json
     paths:
       - gl-code-quality-report.json
+  only:
+    - merge_requests
+    - master
 
 build:
   stage: build
