--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,8 @@ install:
   script:
     # Install node modules
     - cd power
-    - npm install
+    - npm i @angular/cli
+    - npm ci
   cache:
     key:
       files:
