--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,11 +20,14 @@ install:
     # Install node modules
     - cd power
     - npm install
-  cache:
-    key: same-key
+  artifacts:
+    expire_in: 1 week
     paths:
       - power/node_modules/
-  dependencies: []
+  cache:
+    key: "$CI_JOB_NAME"
+    paths:
+      - power/node_modules/
   only:
     - merge_requests
     - master
@@ -44,17 +47,10 @@ test:karma:
     - node_modules/@angular/cli/bin/ng test --browsers ChromeHeadlessNoSandbox --progress false --watch false --code-coverage
   coverage: '/Lines \W+: (\d+\.\d+)%.*/'
   artifacts:
-    expire_in: 1 week
     reports:
       junit: power/output/junit_karma.xml
     paths:
       - power/output/junit_karma.xml
-  cache:
-    key: same-key
-    paths:
-      - power/node_modules/
-    policy: pull
-  dependencies: []
   only:
     - merge_requests
     - master
@@ -73,17 +69,10 @@ test:e2e:
     - cd power
     - node_modules/@angular/cli/bin/ng e2e --protractor-config e2e/protractor-ci.conf.js
   artifacts:
-    expire_in: 1 week
     reports:
       junit: power/output/junit_e2e.xml
     paths:
       - power/output/junit_e2e.xml
-  cache:
-    key: same-key
-    paths:
-      - power/node_modules/
-    policy: pull
-  dependencies: []
   only:
     - merge_requests
     - master
@@ -95,12 +84,6 @@ test:audit:
   script:
     - cd power
     - npm audit
-  cache:
-    key: same-key
-    paths:
-      - power/node_modules/
-    policy: pull
-  dependencies: []
   only:
     - merge_requests
     - master
@@ -112,12 +95,6 @@ test:lint:
   script:
     - cd power
     - npm run lint
-  cache:
-    key: same-key
-    paths:
-      - power/node_modules/
-    policy: pull
-  dependencies: []
   only:
     - merge_requests
     - master
@@ -129,12 +106,6 @@ test:lint:styles:
   script:
     - cd power
     - npm run lint:styles
-  cache:
-    key: same-key
-    paths:
-      - power/node_modules/
-    policy: pull
-  dependencies: []
   only:
     - merge_requests
     - master
@@ -146,35 +117,33 @@ build:
     - cd power
     - npm run build -- --prod
   artifacts:
-    expire_in: 2 days
+    expire_in: 1 week
     paths:
       - power/dist/power
   cache:
-    key: same-key
+    key: "$CI_JOB_NAME"
     paths:
-      - power/node_modules/
-    policy: pull
-  dependencies: []
+      - power/dist/
   only:
     - master
 
 package:
   stage: package
   image: docker
+  dependencies:
+    - build
   script:
     - export VERSION=$(cat power/package.json | grep version | head -1 | awk -F= "{ print $2 }" | sed 's/[version:,\",]//g' | tr -d '[[:space:]]')
     - echo "$CI_REGISTRY_PASSWORD" | docker login --username "$CI_REGISTRY_USER" --password-stdin $CI_REGISTRY
     - docker build --pull -t "$CI_REGISTRY_IMAGE:$VERSION" .
     - docker push "$CI_REGISTRY_IMAGE:$VERSION"
-  cache: {}
-  dependencies:
-    - build
   only:
     - master
 
 deploy:dev:
   stage: deploy
   image: dtzar/helm-kubectl:3.1.2
+  dependencies: []
   script:
     - export VERSION=$(cat power/package.json | grep version | head -1 | awk -F= "{ print $2 }" | sed 's/[version:,\",]//g' | tr -d '[[:space:]]')
     - kubectl config set-cluster k8s --server="$KUBE_API_URL" --insecure-skip-tls-verify=true
@@ -182,14 +151,13 @@ deploy:dev:
     - kubectl config set-context default --cluster=k8s --user="$KUBE_DEPLOY_SECRET_NAME"
     - kubectl config use-context default
     - helm upgrade power ./chart/power -n dev --install --set=image.tag="$VERSION"
-  cache: {}
-  dependencies: []
   only:
     - master
 
 deploy:staging:
   stage: deploy
   image: dtzar/helm-kubectl:3.1.2
+  dependencies: []
   script:
     - export VERSION=$(cat power/package.json | grep version | head -1 | awk -F= "{ print $2 }" | sed 's/[version:,\",]//g' | tr -d '[[:space:]]')
     - kubectl config set-cluster k8s --server="$KUBE_API_URL" --insecure-skip-tls-verify=true
@@ -197,8 +165,6 @@ deploy:staging:
     - kubectl config set-context default --cluster=k8s --user="$KUBE_DEPLOY_SECRET_NAME"
     - kubectl config use-context default
     - helm upgrade power ./chart/power -n staging --install --set=image.tag="$VERSION"
-  cache: {}
-  dependencies: []
   only:
     - master
   when: manual
