add volumemount modules-configmap

--- a/chart/power/templates/deployment.yaml
+++ b/chart/power/templates/deployment.yaml
@@ -27,6 +27,10 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          volumeMounts:
+          - name: power-modules-config
+            mountPath: "/usr/share/nginx/html/assets/config.json"
+            readOnly: true
           envFrom:
             - secretRef:
                 name: power-secret
@@ -44,6 +48,10 @@ spec:
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+      volumes:
+      - name: power-modules-config
+        configMap:
+          name: power-modules
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
