--- a/chart/power/values.yaml
+++ b/chart/power/values.yaml
@@ -67,3 +67,10 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+config:
+  modules:
+    - "bodenrichtwerte"
+    - "bodenwerte"
+    - "immobilien"
+    - "fragebogen"
