--- a/power/tsconfig.json
+++ b/power/tsconfig.json
@@ -24,7 +24,8 @@
 		"lib": [
 			"es2017",
 			"dom"
-		]
+		],
+    "resolveJsonModule": true
 	},
   "angularCompilerOptions": {
     "enableIvy": true,
