--- a/power/.stylelintrc.json
+++ b/power/.stylelintrc.json
@@ -1,6 +1,14 @@
 {
   "extends": "stylelint-config-standard",
   "rules": {
-    "no-empty-source": null
+    "no-empty-source": null,
+    "selector-pseudo-element-no-unknown": [
+      true,
+      {
+        "ignorePseudoElements": [
+          "ng-deep"
+        ]
+      }
+    ]
   }
 }
