Stylelint: Allow custom elements

--- a/power/.stylelintrc.json
+++ b/power/.stylelintrc.json
@@ -9,6 +9,14 @@
           "ng-deep"
         ]
       }
+    ],
+    "selector-type-no-unknown": [
+      true,
+      {
+        "ignore": [
+          "custom-elements"
+        ]
+      }
     ]
   }
 }
