--- a/power/package.json
+++ b/power/package.json
@@ -14,20 +14,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/core": "^9.1.11",
-    "@angular-devkit/schematics": "^9.1.11",
-    "@angular/animations": "^9.1.12",
+    "@angular-devkit/core": "^10.0.3",
+    "@angular-devkit/schematics": "^10.0.3",
+    "@angular/animations": "^10.0.4",
     "@angular/cdk": "^9.2.4",
-    "@angular/common": "^9.1.12",
-    "@angular/compiler": "^9.1.12",
-    "@angular/core": "^9.1.12",
-    "@angular/forms": "^9.1.12",
-    "@angular/localize": "^9.1.12",
+    "@angular/common": "^10.0.4",
+    "@angular/compiler": "^10.0.4",
+    "@angular/core": "^10.0.4",
+    "@angular/forms": "^10.0.4",
+    "@angular/localize": "^10.0.4",
     "@angular/material": "^9.2.4",
-    "@angular/platform-browser": "^9.1.12",
-    "@angular/platform-browser-dynamic": "^9.1.12",
-    "@angular/router": "^9.1.12",
-    "@angular/service-worker": "^9.1.12",
+    "@angular/platform-browser": "^10.0.4",
+    "@angular/platform-browser-dynamic": "^10.0.4",
+    "@angular/router": "^10.0.4",
+    "@angular/service-worker": "^10.0.4",
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "@ngrx/effects": "^9.2.0",
     "@ngrx/store": "^9.2.0",
@@ -60,36 +60,36 @@
     "rxjs-compat": "^6.6.0",
     "showdown": "^1.9.1",
     "survey-angular": "~1.5.20",
-    "tslib": "^1.13.0",
+    "tslib": "^2.0.0",
     "web-animations-js": "^2.3.2",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.11",
-    "@angular/cli": "^9.1.11",
-    "@angular/compiler-cli": "^9.1.12",
-    "@angular/language-service": "^9.1.12",
+    "@angular-devkit/build-angular": "^0.1000.3",
+    "@angular/cli": "^10.0.3",
+    "@angular/compiler-cli": "^10.0.4",
+    "@angular/language-service": "^10.0.4",
     "@types/jasmine": "^3.5.11",
     "@types/jasminewd2": "^2.0.8",
     "@types/mapbox-gl": "0.51.4",
     "@types/node": "^12.12.50",
-    "codelyzer": "^5.2.2",
+    "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-reporters": "^2.3.2",
-    "jasmine-spec-reporter": "~5.0.2",
-    "karma": "^5.1.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "^3.0.3",
-    "karma-jasmine": "~3.3.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~3.3.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "karma-junit-reporter": "^2.0.1",
-    "protractor": "^7.0.0",
+    "protractor": "~7.0.0",
     "stylelint": "^13.6.1",
     "stylelint-config-standard": "^20.0.0",
     "ts-node": "^8.10.2",
-    "tslint": "^5.20.1",
+    "tslint": "~6.1.0",
     "tslint-angular": "^3.0.2",
     "tslint-microsoft-contrib": "^6.2.0",
-    "typescript": "3.7.5"
+    "typescript": "3.9.7"
   }
 }
