--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,9 +3,6 @@ image: docker:19-git
 services:
   - docker:19-dind
 
-variables:
-  IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_REF_SLUG
-
 stages:
   - init
   - test
@@ -30,7 +27,8 @@ install:
       - power/node_modules/
   only:
     - merge_requests
-    - master
+    - dev
+    - staging
 
 test:karma:
   stage: test
@@ -53,7 +51,8 @@ test:karma:
       - power/output/junit_karma.xml
   only:
     - merge_requests
-    - master
+    - dev
+    - staging
 
 test:e2e:
   stage: test
@@ -75,7 +74,8 @@ test:e2e:
       - power/output/junit_e2e.xml
   only:
     - merge_requests
-    - master
+    - dev
+    - staging
 
 test:audit:
   stage: test
@@ -86,7 +86,8 @@ test:audit:
     - npm audit
   only:
     - merge_requests
-    - master
+    - dev
+    - staging
 
 test:lint:
   stage: test
@@ -97,7 +98,8 @@ test:lint:
     - npm run lint
   only:
     - merge_requests
-    - master
+    - dev
+    - staging
 
 test:lint:styles:
   stage: test
@@ -108,7 +110,8 @@ test:lint:styles:
     - npm run lint:styles
   only:
     - merge_requests
-    - master
+    - dev
+    - staging
 
 build:
   stage: build
@@ -116,6 +119,7 @@ build:
   script:
     - cd power
     - npm run build -- --prod
+    - echo "$CI_COMMIT_REF_NAME/$CI_COMMIT_SHORT_SHA" > dist/power/assets/config/version
   artifacts:
     expire_in: 1 week
     paths:
@@ -125,7 +129,8 @@ build:
     paths:
       - power/dist/
   only:
-    - master
+    - dev
+    - staging
 
 package:
   stage: package
@@ -133,38 +138,23 @@ package:
   dependencies:
     - build
   script:
-    - export VERSION=$(cat power/package.json | grep version | head -1 | awk -F= "{ print $2 }" | sed 's/[version:,\",]//g' | tr -d '[[:space:]]')
     - echo "$CI_REGISTRY_PASSWORD" | docker login --username "$CI_REGISTRY_USER" --password-stdin $CI_REGISTRY
-    - docker build --pull -t "$CI_REGISTRY_IMAGE:$VERSION" .
-    - docker push "$CI_REGISTRY_IMAGE:$VERSION"
+    - docker build --pull -t "$CI_REGISTRY_IMAGE:$CI_COMMIT_SHORT_SHA" .
+    - docker push "$CI_REGISTRY_IMAGE:$CI_COMMIT_SHORT_SHA"
   only:
-    - master
+    - dev
+    - staging
 
-deploy:dev:
+deploy:
   stage: deploy
   image: dtzar/helm-kubectl:3.1.2
   dependencies: []
   script:
-    - export VERSION=$(cat power/package.json | grep version | head -1 | awk -F= "{ print $2 }" | sed 's/[version:,\",]//g' | tr -d '[[:space:]]')
     - kubectl config set-cluster k8s --server="$KUBE_API_URL" --insecure-skip-tls-verify=true
     - kubectl config set-credentials "$KUBE_DEPLOY_SECRET_NAME" --token="$KUBE_API_TOKEN"
     - kubectl config set-context default --cluster=k8s --user="$KUBE_DEPLOY_SECRET_NAME"
     - kubectl config use-context default
-    - helm upgrade power ./chart/power -n dev --install --set=image.tag="$VERSION"
+    - helm upgrade power ./chart/power -n "$CI_COMMIT_REF_NAME" --install --set=image.tag="$CI_COMMIT_SHORT_SHA"
   only:
-    - master
-
-deploy:staging:
-  stage: deploy
-  image: dtzar/helm-kubectl:3.1.2
-  dependencies: []
-  script:
-    - export VERSION=$(cat power/package.json | grep version | head -1 | awk -F= "{ print $2 }" | sed 's/[version:,\",]//g' | tr -d '[[:space:]]')
-    - kubectl config set-cluster k8s --server="$KUBE_API_URL" --insecure-skip-tls-verify=true
-    - kubectl config set-credentials "$KUBE_DEPLOY_SECRET_NAME" --token="$KUBE_API_TOKEN"
-    - kubectl config set-context default --cluster=k8s --user="$KUBE_DEPLOY_SECRET_NAME"
-    - kubectl config use-context default
-    - helm upgrade power ./chart/power -n staging --install --set=image.tag="$VERSION"
-  only:
-    - master
-  when: manual
+    - dev
+    - staging
