--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,6 +57,7 @@ test:karma:
 test:e2e:
   stage: test
   image: node:13
+  allow_failure: true
   before_script:
     # Install chrome
     - wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub |  apt-key add -
