--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
-image: docker:19-git
+image: docker:stable-git
 
 services:
-  - docker:19-dind
+  - docker:stable-dind
 
 stages:
   - init
@@ -10,29 +10,39 @@ stages:
   - package
   - deploy
 
+cache: &global_cache
+  key: ${CI_COMMIT_REF_SLUG}
+  paths:
+    - power/node_modules/
+  policy: pull-push
+
 install:
   stage: init
-  image: node:13
-  script:
-    # Install node modules
-    - cd power
-    - npm install
-  artifacts:
-    expire_in: 1 week
-    paths:
-      - power/node_modules/
+  image: node:14.5
+  dependencies: []
   cache:
-    key: "$CI_JOB_NAME"
-    paths:
-      - power/node_modules/
+    # load cache
+    <<: *global_cache
+  script:
+    # install node modules
+    - cd power
+    - npm ci
   only:
-    - merge_requests
-    - dev
-    - staging
+    changes:
+      - package-lock.json
+    refs:
+      - merge_requests
+      - dev
+      - staging
 
 test:karma:
   stage: test
-  image: node:13
+  image: node:14.5
+  dependencies: []
+  cache:
+    # load cache
+    <<: *global_cache
+    policy: pull
   before_script:
     # Install chrome
     - wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub |  apt-key add -
@@ -56,7 +66,12 @@ test:karma:
 
 test:e2e:
   stage: test
-  image: node:13
+  image: node:14.5
+  dependencies: []
+  cache:
+    # load cache
+    <<: *global_cache
+    policy: pull
   allow_failure: true
   before_script:
     # Install chrome
@@ -80,7 +95,12 @@ test:e2e:
 
 test:audit:
   stage: test
-  image: node:13
+  image: node:14.5
+  dependencies: []
+  cache:
+    # load cache
+    <<: *global_cache
+    policy: pull
   allow_failure: true
   script:
     - cd power
@@ -92,7 +112,12 @@ test:audit:
 
 test:lint:
   stage: test
-  image: node:13
+  image: node:14.5
+  dependencies: []
+  cache:
+    # load cache
+    <<: *global_cache
+    policy: pull
   allow_failure: true
   script:
     - cd power
@@ -104,7 +129,12 @@ test:lint:
 
 test:lint:styles:
   stage: test
-  image: node:13
+  image: node:14.5
+  dependencies: []
+  cache:
+    # load cache
+    <<: *global_cache
+    policy: pull
   allow_failure: true
   script:
     - cd power
@@ -116,27 +146,30 @@ test:lint:styles:
 
 build:
   stage: build
-  image: node:13
+  image: node:14.5
+  dependencies: []
+  cache:
+    # load cache
+    <<: *global_cache
+    policy: pull
   script:
     - cd power
     - npm run build -- --prod
   artifacts:
+    name: "compiled dist"
     expire_in: 1 week
     paths:
       - power/dist/power
-  cache:
-    key: "$CI_JOB_NAME"
-    paths:
-      - power/dist/
   only:
     - dev
     - staging
 
 package:
   stage: package
-  image: docker
+  image: docker:stable
   dependencies:
     - build
+  cache: {}
   script:
     - echo "$CI_REGISTRY_PASSWORD" | docker login --username "$CI_REGISTRY_USER" --password-stdin $CI_REGISTRY
     - docker build --pull -t "$CI_REGISTRY_IMAGE:$CI_COMMIT_SHORT_SHA" --build-arg=COMMIT="$CI_COMMIT_SHORT_SHA" --build-arg=BRANCH="$CI_COMMIT_REF_NAME" .
@@ -147,9 +180,9 @@ package:
 
 deploy:
   stage: deploy
-  image: dtzar/helm-kubectl:3.1.2
-  dependencies:
-    - package
+  image: dtzar/helm-kubectl:latest
+  dependencies: []
+  cache: {}
   script:
     - kubectl config set-cluster k8s --server="$KUBE_API_URL" --insecure-skip-tls-verify=true
     - kubectl config set-credentials "$KUBE_DEPLOY_SECRET_NAME" --token="$KUBE_API_TOKEN"
