--- a/power/package.json
+++ b/power/package.json
@@ -17,13 +17,13 @@
     "@angular-devkit/core": "^10.0.5",
     "@angular-devkit/schematics": "^10.0.5",
     "@angular/animations": "^10.0.7",
-    "@angular/cdk": "^10.1.1",
+    "@angular/cdk": "^10.1.2",
     "@angular/common": "^10.0.7",
     "@angular/compiler": "^10.0.7",
     "@angular/core": "^10.0.7",
     "@angular/forms": "^10.0.7",
     "@angular/localize": "^10.0.7",
-    "@angular/material": "^10.1.1",
+    "@angular/material": "^10.1.2",
     "@angular/platform-browser": "^10.0.7",
     "@angular/platform-browser-dynamic": "^10.0.7",
     "@angular/router": "^10.0.7",
@@ -47,10 +47,10 @@
     "hyphen": "^1.6.2",
     "i": "^0.3.6",
     "knockout": "^3.5.1",
-    "mapbox-gl": "0.53.1",
+    "mapbox-gl": "^1.11.1",
     "ngx-bootstrap": "^5.6.1",
     "ngx-echarts": "^4.2.2",
-    "ngx-mapbox-gl": "4.4.1",
+    "ngx-mapbox-gl": "^4.8.1",
     "ngx-smooth-dnd": "^0.4.1",
     "node-sass": "^4.14.1",
     "npm": "^6.14.7",
@@ -71,7 +71,7 @@
     "@angular/language-service": "^10.0.7",
     "@types/jasmine": "^3.5.12",
     "@types/jasminewd2": "^2.0.8",
-    "@types/mapbox-gl": "0.51.4",
+    "@types/mapbox-gl": "^1.11.1",
     "@types/node": "^12.12.53",
     "codelyzer": "^6.0.0",
     "jasmine-core": "^3.6.0",
