--- a/power/angular.json
+++ b/power/angular.json
@@ -30,13 +30,12 @@
               "src/manifest.json"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "scripts": [],
             "allowedCommonJsDependencies": [
               "showdown",
-              "surveyjs-widgets/surveyjs-widgets.js",
+              "surveyjs-widgets",
               "nouislider",
               "inputmask",
               "bootstrap-slider"
@@ -98,7 +97,6 @@
             "sourceMap": true,
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "scripts": [],
