--- a/power/package.json
+++ b/power/package.json
@@ -51,6 +51,7 @@
     "ngx-bootstrap": "^5.6.1",
     "ngx-echarts": "^4.2.2",
     "ngx-mapbox-gl": "^4.8.1",
+    "ngx-showdown": "^5.1.0",
     "ngx-smooth-dnd": "^0.4.1",
     "node-sass": "^4.14.1",
     "npm": "^6.14.7",
@@ -73,6 +74,7 @@
     "@types/jasminewd2": "^2.0.8",
     "@types/mapbox-gl": "^1.11.1",
     "@types/node": "^12.12.53",
+    "@types/showdown": "^1.9.3",
     "codelyzer": "^6.0.0",
     "jasmine-core": "^3.6.0",
     "jasmine-reporters": "^2.3.2",
