--- a/power/package.json
+++ b/power/package.json
@@ -54,13 +54,14 @@
     "ngx-showdown": "^5.1.0",
     "ngx-smooth-dnd": "^0.4.1",
     "node-sass": "^4.14.1",
+    "nouislider": "^14.6.0",
     "npm": "^6.14.7",
     "polylabel": "^1.1.0",
     "rxjs": "^6.6.2",
     "rxjs-compat": "^6.6.2",
     "showdown": "^1.9.1",
-    "survey-angular": "^1.7.24",
-    "surveyjs-widgets": "^1.7.24",
+    "survey-angular": "^1.7.25",
+    "surveyjs-widgets": "^1.7.25",
     "tslib": "^2.0.0",
     "web-animations-js": "^2.3.2",
     "zone.js": "^0.10.3"
