--- a/power/.stylelintrc.json
+++ b/power/.stylelintrc.json
@@ -1,6 +1,10 @@
 {
   "extends": "stylelint-config-standard",
   "rules": {
+    "function-comma-space-after": "always",
+    "function-comma-space-before": "never",
+    "indentation": 4,
+    "max-line-length": 120,
     "no-empty-source": null,
     "selector-pseudo-element-no-unknown": [
       true,
@@ -17,6 +21,7 @@
           "custom-elements"
         ]
       }
-    ]
+    ],
+    "string-quotes": "single"
   }
 }
