--- a/power/package.json
+++ b/power/package.json
@@ -9,6 +9,7 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
+    "lint:html": "npx html-validate src/app/**/*.html",
     "lint:styles": "npx stylelint \"src/app/**/*.{css,html,scss}\"",
     "e2e": "ng e2e"
   },
@@ -76,6 +77,7 @@
     "@types/node": "^14.0.27",
     "@types/showdown": "^1.9.3",
     "codelyzer": "^6.0.0",
+    "html-validate": "^3.0.0",
     "jasmine-core": "^3.6.0",
     "jasmine-reporters": "^2.3.2",
     "jasmine-spec-reporter": "^5.0.0",
@@ -91,6 +93,7 @@
     "ts-node": "^8.10.2",
     "tslint": "^6.1.3",
     "tslint-angular": "^3.0.2",
+    "tslint-eslint-rules": "^5.4.0",
     "tslint-microsoft-contrib": "^6.2.0",
     "typescript": "^3.9.7"
   }
