--- a/power/src/tsconfig.app.json
+++ b/power/src/tsconfig.app.json
@@ -1,14 +1,16 @@
 {
-  "extends": "../tsconfig.base.json",
-  "compilerOptions": {
-    "outDir": "../out-tsc/app",
-    "types": ["node"]
-  },
-  "files": [
-    "main.ts",
-    "polyfills.ts"
-  ],
-  "angularCompilerOptions": {
-    "enableIvy": true
-  }
+    "extends": "../tsconfig.base.json",
+    "compilerOptions": {
+        "outDir": "../out-tsc/app",
+        "types": [
+            "node"
+        ]
+    },
+    "files": [
+        "main.ts",
+        "polyfills.ts"
+    ],
+    "angularCompilerOptions": {
+        "enableIvy": true
+    }
 }
