--- a/power/angular.json
+++ b/power/angular.json
@@ -34,7 +34,8 @@
                             "src/favicon.ico",
                             "src/assets",
                             "src/webfonts",
-                            "src/manifest.json"
+                            "src/manifest.json",
+                            "src/robots.txt"
                         ],
                         "styles": [
                             "src/styles.scss"
