--- a/power/package.json
+++ b/power/package.json
@@ -15,19 +15,19 @@
     },
     "private": true,
     "dependencies": {
-        "@angular-devkit/core": "^10.0.7",
-        "@angular-devkit/schematics": "^10.0.7",
-        "@angular/animations": "^10.0.11",
+        "@angular-devkit/core": "^10.0.8",
+        "@angular-devkit/schematics": "^10.0.8",
+        "@angular/animations": "^10.0.14",
         "@angular/cdk": "^10.1.3",
-        "@angular/common": "^10.0.11",
-        "@angular/compiler": "^10.0.11",
-        "@angular/core": "^10.0.11",
-        "@angular/forms": "^10.0.11",
-        "@angular/localize": "^10.0.11",
-        "@angular/platform-browser": "^10.0.11",
-        "@angular/platform-browser-dynamic": "^10.0.11",
-        "@angular/router": "^10.0.11",
-        "@angular/service-worker": "^10.0.11",
+        "@angular/common": "^10.0.14",
+        "@angular/compiler": "^10.0.14",
+        "@angular/core": "^10.0.14",
+        "@angular/forms": "^10.0.14",
+        "@angular/localize": "^10.0.14",
+        "@angular/platform-browser": "^10.0.14",
+        "@angular/platform-browser-dynamic": "^10.0.14",
+        "@angular/router": "^10.0.14",
+        "@angular/service-worker": "^10.0.14",
         "@ng-bootstrap/ng-bootstrap": "^7.0.0",
         "@types/geojson": "^7946.0.7",
         "angular-resize-event": "^1.2.2",
@@ -35,14 +35,14 @@
         "bootstrap-icons": "^1.0.0-alpha5",
         "classlist.js": "^1.1.20150312",
         "core-js": "^3.6.5",
-        "echarts": "^4.8.0",
+        "echarts": "^4.9.0",
         "fast-xml-parser": "^3.17.4",
         "geojson": "^0.5.0",
         "hyphen": "^1.6.2",
         "knockout": "^3.5.1",
         "mapbox-gl": "^1.12.0",
         "ngx-bootstrap": "^5.6.1",
-        "ngx-bootstrap-icons": "0.0.23",
+        "ngx-bootstrap-icons": "^0.0.26",
         "ngx-echarts": "^4.2.2",
         "ngx-mapbox-gl": "^4.8.1",
         "ngx-showdown": "^6.0.0",
@@ -52,24 +52,24 @@
         "rxjs": "^6.6.2",
         "rxjs-compat": "^6.6.2",
         "showdown": "^1.9.1",
-        "survey-angular": "^1.7.27",
-        "surveyjs-widgets": "^1.7.27",
+        "survey-angular": "^1.7.28",
+        "surveyjs-widgets": "^1.7.28",
         "tslib": "^2.0.1",
         "web-animations-js": "^2.3.2",
         "zone.js": "^0.10.3"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^0.1000.7",
-        "@angular/cli": "^10.0.7",
-        "@angular/compiler-cli": "^10.0.11",
-        "@angular/language-service": "^10.0.11",
-        "@types/jasmine": "^3.5.12",
+        "@angular-devkit/build-angular": "^0.1000.8",
+        "@angular/cli": "^10.0.8",
+        "@angular/compiler-cli": "^10.0.14",
+        "@angular/language-service": "^10.0.14",
+        "@types/jasmine": "^3.5.14",
         "@types/jasminewd2": "^2.0.8",
         "@types/mapbox-gl": "^1.11.2",
-        "@types/node": "^14.6.0",
+        "@types/node": "^14.6.1",
         "@types/showdown": "^1.9.3",
         "codelyzer": "^6.0.0",
-        "html-validate": "^3.1.0",
+        "html-validate": "^3.2.0",
         "jasmine-core": "^3.6.0",
         "jasmine-reporters": "^2.3.2",
         "jasmine-spec-reporter": "^5.0.0",
