--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,17 +33,11 @@ install:
 
 test:karma:
   stage: test
-  image: node:14
+  image: trion/ng-cli-karma:latest
   dependencies: []
   cache:
     <<: *global_cache
     policy: pull
-  before_script:
-    # Install chrome
-    - wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub |  apt-key add -
-    - echo 'deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main' |  tee /etc/apt/sources.list.d/google-chrome.list
-    - apt-get update
-    - apt-get install google-chrome-stable -y
   script:
     # Run Karma tests
     - cd power
@@ -62,18 +56,11 @@ test:karma:
 
 test:e2e:
   stage: test
-  image: node:14
+  image: trion/ng-cli-e2e:latest
   dependencies: []
   cache:
     <<: *global_cache
     policy: pull
-  allow_failure: true
-  before_script:
-    # Install chrome
-    - wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub |  apt-key add -
-    - echo 'deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main' |  tee /etc/apt/sources.list.d/google-chrome.list
-    - apt-get update
-    - apt-get install google-chrome-stable -y
   script:
     # Run E2E tests
     - cd power
@@ -88,7 +75,6 @@ test:e2e:
     - merge_requests
     - dev
     - staging
-  when: manual
 
 test:audit:
   stage: test
